@@ -4,7 +4,8 @@ CHANGE LOG
 
 Changes up to 0.96
 
-   * improved quality of the surface rendering algorithm
+   * greatly improved quality of the surface rendering algorithm for
+     surface_quality = 2, 3, 4, etc.
 
    * fixed over-zealous movie security warning: no longer warns if
      there weren't any commands defined
